<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/rel_headerImage"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@drawable/image2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_blackOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#70000000" />

        <ImageView
            android:id="@+id/img_balckOverlayLogo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:src="@drawable/mainlogo" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rel_headerImage" />

    <TextView
        android:id="@+id/txt_kapdepress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/kapdepress"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rel_headerImage" />

    <View
        android:id="@+id/divider"
        android:layout_width="35dp"
        android:layout_height="2dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="1dp"
        android:background="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_login" />

    <TextView
        android:id="@+id/txt_EnterCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/proximanovaregular"
        android:singleLine="true"
        android:text="@string/enter_user_code"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <EditText
        android:id="@+id/et_otp"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/textviewcircular"
        android:fontFamily="@font/proximanovaregular"
        android:hint="@string/enter_user_code"
        android:paddingStart="8dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textCursorDrawable="@color/blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_EnterCode" />

    <TextView
        android:id="@+id/txt_Enterpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/proximanovaregular"
        android:singleLine="true"
        android:text="@string/enter_password"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_otp" />

    <EditText
        android:id="@+id/et_passowrd"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/textviewcircular"
        android:fontFamily="@font/proximanovaregular"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textCursorDrawable="@color/blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Enterpassword" />

    <TextView
        android:id="@+id/txt_forgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="end"
        android:singleLine="true"
        android:text="@string/forget_passowrd"
        android:textAlignment="textEnd"
        android:textColor="@color/blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_passowrd" />

    <RelativeLayout
        android:id="@+id/rel_loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_forgetPassword"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:background="@drawable/login_signup_btn">
        <TextView
            android:id="@+id/txt_verify"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_centerInParent="true"
             />

        <ProgressBar
            android:id="@+id/prg_login"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@id/txt_verify"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:visibility="gone"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/txt_or_continue_with"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/continue_with"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rel_loginBtn" />

    <LinearLayout
        android:id="@+id/linear_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_or_continue_with">

        <RelativeLayout
            android:id="@+id/rel_phone_login"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/circle_shadow">

            <ImageView
                android:id="@+id/img_phone_login"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_phone_login" />
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="@string/dont_have_an_ac"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>