<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupwithphoneActivity">

    <RelativeLayout
        android:id="@+id/rel_headerImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/image2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_blackOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#70000000" />

        <ImageView
            android:id="@+id/img_balckOverlayLogo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:src="@drawable/mainlogo" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rel_headerImage" />

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/signup_via_phone"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_back"
        app:layout_constraintTop_toBottomOf="@+id/rel_headerImage" />

    <View
        android:id="@+id/divider"
        android:layout_width="236dp"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:background="@color/blue"
        app:layout_constraintStart_toEndOf="@+id/img_back"
        app:layout_constraintTop_toBottomOf="@+id/txt_login" />

    <TextView
        android:id="@+id/txt_mobno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/proximanovaregular"
        android:singleLine="true"
        android:text="@string/enter_mobno"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <LinearLayout
        android:id="@+id/linear_mobno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/txt_mobno">

        <EditText
            android:id="@+id/et_countryCode1"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/textviewcircular"
            android:editable="false"
            android:fontFamily="@font/proximanovaregular"
            android:paddingStart="8dp"
            android:paddingRight="15dp"
            android:singleLine="true"
            android:text="+91"
            android:textColor="@color/black"
            android:textCursorDrawable="@color/blue"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_mobno"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/textviewcircular"
            android:fontFamily="@font/proximanovaregular"
            android:hint="@string/enter_mob_no"
            android:inputType="number"
            android:paddingStart="8dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textCursorDrawable="@color/blue"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_Name" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_sendotp"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/login_signup_btn"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/send_otp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_mobno" />

</androidx.constraintlayout.widget.ConstraintLayout>